--- a/src/main/resources/hi/is/vidmot/veganifel/mainReglur-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/mainReglur-view.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="481.0" prefWidth="728.0" style="-fx-background-radius: 30;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.mainReglurController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="481.0" prefWidth="728.0" style="-fx-background-radius: 30;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.mainReglurController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="740.0" text="Reglur">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Það er verkefnastjórinn sem að velja einhvern af leikmönnunum sem ritari sinn, þeir leikmenn sem að eru eftir kjósa hvort að þeir treysta þeim til þess að velja spil fyrir alæturnar. Til þess að halda áfram þá þarf meirihlutinn að kjósa &quot;já&quot;, ef að það gerist ekki þá er annar verkefnastjóri og hann velur annan ritari. Ef haldið er áfram þá fá verkefnastjórinn og ritarinn að velja spil sem að er síðan lagt niður á borðið. Fyrsti hópurinn til að fá 7 spil niður á borðið vinna. Vegan og Úlfur eru að safna grænum spilum, alætur eru að safna bláum spilum" textAlignment="CENTER" wrappingWidth="728.13671875">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Verkefnasjórinn á að velja einn af leikmönnunum sem ritara sinn. Leikmenn kjósa hvort að þeir treysta þeim til að leggja niður spil. Til þess að halda áfram þarf meirihlutinn að kjósa &quot;já&quot;, ef að það gerist ekki þá er annar leikmaður látinn vera verkefnastjóri og hann velur sér ritari. Ef haldið er áfram þá fá verkefnastjórinn og ritarinn að velja spil sem að er síðan lagt niður á borðið. Fyrsa liðið til að fá 8 spil niður á borðið vinna. Vegan og Úlfur eru að safna grænum spilum, alætur eru að safna bláum spilum" textAlignment="CENTER" wrappingWidth="728.13671875">
          <font>
             <Font size="26.0" />
          </font>
