--- a/src/main/resources/hi/is/vidmot/veganifel/nofnReglur-view.fxml
+++ b/src/main/resources/hi/is/vidmot/veganifel/nofnReglur-view.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.nofnReglurController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.is.vidmot.veganifel.nofnReglurController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="714.0" text="Reglur">
          <font>
@@ -12,7 +15,7 @@
          </font>
       </Label>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Það þarf að fylla inn nöfn á öllum 8 leikmönnum sem að ætla að spila með til þess að halda áfram" textAlignment="CENTER" wrappingWidth="714.13671875">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Það þarf að fylla inn nöfn á öllum 8 leikmönnum til þess að halda áfram" textAlignment="CENTER" wrappingWidth="714.13671875">
          <font>
             <Font size="26.0" />
          </font>
